styles/queries.css
/* ******************** */
/*  BELOW 1344px */
/* ******************** */

@media (max-width: 84rem) {
}

/* ******************************** */
/*  BELOW 1200px(landscape tablets) */
/* ******************************** */

@media (max-width: 75em) {
  html {
    font-size: 56.25%;
  }
}

/* ******************************** */
/*  BELOW 944px(Tablets) */
/* ******************************** */

@media (max-width: 59em) {
  html {
    font-size: 50%;
  }

  /* .blog-container--grid {
    max-width: 70rem;
  } */
}

/* ******************************** */
/*  BELOW 704px(Small Tablets) */
/* ******************************** */

@media (max-width: 47em) {
  html {
    font-size: 43.75%;
  }

  .blog-feed__item {
    flex-direction: column;
  }

  .blog-post__meta {
    display: flex;
    flex-direction: row-reverse;
    text-align: center;
    justify-content: space-between;
  }

  .blog-post {
    width: 100%;
  }

  .blog-post__date {
    font-size: 1.6rem;
  }

  .blog-post__categories {
    padding: 0.75rem 1rem;
    margin-left: 0.5rem;
  }

  .home-page {
    flex-direction: column;
    justify-content: center;
  }

  .home-center {
    display: flex;
    order: 0;
  }
  .home-left {
    width: 70vw;
    order: 1;
  }

  hr {
    display: none;
  }

  .home-right {
    width: 70vw;
    order: 2;
  }

  .home-center__img {
    height: auto;
    width: 70%;
    margin: 0 auto;
  }

  /* MOBILE Navigation */
  .btn-mobile-nav {
    display: block;
    z-index: 9999;
  }

  .nav {
    background-color: var(--bg-alt);
    -webkit-backdrop-filter: blur(5px);
    position: absolute;
    top: 0;
    left: 0;
    /* inset: 0 0 0 0; */
    width: 100%;
    height: 100vh;
    transform: translateX(100%);

    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.4s ease-in;
    opacity: 0;
    pointer-events: none;
    visibility: hidden;
  }

  .nav-open .nav {
    opacity: 1;
    pointer-events: auto;
    visibility: visible;
    transform: translateX(0);
    position: fixed;
  }

  .nav-open .icon-mobile-nav[name='close-outline'] {
    display: block;
  }
  .nav-open .icon-mobile-nav[name='menu-outline'] {
    display: none;
  }

  .nav__list {
    flex-direction: column;
    gap: 4.8rem;
  }

  .nav__link:link,
  .nav__link:visited {
    font-size: 3rem;
  }

  .home-right__list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 15px;
    max-width: 50rem;

    /* justify-content: space-between; */
  }

  .home-right__heading {
    margin-bottom: 1rem;
  }
  .contact {
    margin-top: 2rem;
  }
}

/* ******************************** */
/*  BELOW 544px(Phones) */
/* ******************************** */

@media (max-width: 34em) {
  .blog-container-2 {
    max-width: 40rem;
  }
  .blog-feed {
    max-width: 50rem;
  }
  .home-right__list {
    /* flex-direction: column; */
    gap: 2rem;
    justify-content: flex-start;
  }
  .home-left {
    height: 30rem;
  }
  .home-page {
    padding-top: 0rem;
  }
}

/* ******************************** */
/*  BELOW 340px(Phones) */
/* ******************************** */

@media (max-width: 23em) {
  .heading-primary {
    font-size: 5.4rem;
  }

  .home-center {
    display: none;
  }
  .blog-feed {
    max-width: 40rem;
  }
  .home-right__list {
    flex-direction: column;
    gap: 1rem;
  }
  .home-page {
    padding-top: 0rem;
  }
}

/* 

HOME PAGE 

header
logo
logo__para
logo__span
nav
nav__list
nav__link
btn-mobile-nav
icon-mobile-nav

home-page
home-left
home-left__heading-2
home-left__heading
home-left__about-heading
home-left__about-text
home-center
home-right
home-right__heading
home-right__list
home-right__link
contact
contact__heading
contact__link


heading-title
heading-sub


container
heading-title
blog-container
blog-container__header
blog-container__text
blog-codeblock
blog-codeblock__span
btn-home


resources-section
resources-container
resources__heading
resources__link
resources__img


blog-article
blog-article___heading
blog-article__text
blog-container--grid
btn-2
*/

